src/objects/Validation_Rule_Assignment_Custom_Object__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <label>Mix Pct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multiple_Of_5__c</fullName>
        <label>Multiple Of 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Day_Date__c</fullName>
        <label>Week Day Date</label>
        <type>Date</type>
    </fields>
    <label>Validation Rule Assignment Custom Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Validation Rule Assignment Custom Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Validation Rule Assignment Custom Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CreditCardNumberFormatShouldBeCorrect</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(ISBLANK(Credit_Card_Number__c),      REGEX(Credit_Card_Number__c,&apos;(((\\d{4}-){3}\\d{4})|\\d{16})&apos;)))</errorConditionFormula>
        <errorDisplayField>Credit_Card_Number__c</errorDisplayField>
        <errorMessage>Credit Card Number Should be blank or it should be in the format 9999-9999-9999-9999 or 9999999999999999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mix_PCT_Value_should_be_a_valid_percent</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Mix_Pct__c &lt; 0, Mix_Pct__c &gt; 1)</errorConditionFormula>
        <errorDisplayField>Mix_Pct__c</errorDisplayField>
        <errorMessage>The Value in this field should be between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multiple_Of_5_should_be_correct</fullName>
        <active>true</active>
        <errorConditionFormula>MOD(Multiple_Of_5__c, 5)  &lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>Multiple_Of_5__c</errorDisplayField>
        <errorMessage>The value in this field should be a multiple of 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Week_Day_Date_should_not_be_weekend</fullName>
        <active>true</active>
        <errorConditionFormula>OR(WEEKDAY( Week_Day_Date__c ) = 1,
   WEEKDAY( Week_Day_Date__c ) = 7)</errorConditionFormula>
        <errorDisplayField>Week_Day_Date__c</errorDisplayField>
        <errorMessage>Week Day Date Cannot Be Saturday Or Sunday</errorMessage>
    </validationRules>
</CustomObject>